--- a/Downloads/invlog_test/web/index.html
+++ b/Downloads/invlog_test/web/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -37,7 +37,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = null;
+    const serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -54,6 +54,10 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics-compat.js"></script>
   <!-- Firebase Messaging -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging-compat.js"></script>
+
+  <script>
+    window.flutterWebRenderer = "html";
+  </script>
 
   <script>
     // Your web app's Firebase configuration
@@ -74,34 +78,15 @@
 <body>
   <script>
     window.addEventListener('load', function(ev) {
-      // Download main.dart.js
-      _flutter = {
-        loader: {
-          loadEntrypoint: function(options) {
-            return new Promise(function(resolve, reject) {
-              var scriptTag = document.createElement('script');
-              scriptTag.src = 'main.dart.js';
-              scriptTag.type = 'application/javascript';
-              scriptTag.onload = function() {
-                resolve();
-              };
-              scriptTag.onerror = function(error) {
-                reject(error);
-              };
-              document.body.appendChild(scriptTag);
-            });
-          }
-        }
-      };
-
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
+        },
+        onEntrypointLoaded: function(engineInitializer) {
+          engineInitializer.initializeEngine().then(function(appRunner) {
+            appRunner.runApp();
+          });
         }
-      }).then(function(engineInitializer) {
-        return engineInitializer.initializeEngine();
-      }).then(function(appRunner) {
-        return appRunner.runApp();
       });
     });
   </script>
