Update WORKER_URL to new Cloudflare Worker

--- a/options-analyzer/index.html
+++ b/options-analyzer/index.html
@@ -751,7 +751,7 @@ body {
 <script>
 // ─── Configuration ──────────────────────────────────────────────────────────
 // Set your Cloudflare Worker URL here:
-const WORKER_URL = 'https://options-analyzer.YOUR_SUBDOMAIN.workers.dev';
+const WORKER_URL = 'https://super-breeze-55d5.raedsgame.workers.dev/';
 
 // Presets
 const PRESETS = {
